# MCP-Server-PDF-Manipulator-

./: README.md
PDF-Manipulator/: README.md  pyproject.toml
PDF-Manipulator/src/pdf_manipulator/: server.py
